<resources>
    <string name="app_name">One e-Shop</string>
    <string name="title_activity_edit_deal">Edit and Add</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="edit_hint">Edit and Add</string>
    <string name="title_activity_test">Test</string>
    <string name="tv_notice">The name of Added Deals will appear here</string>
    <string name="profile_text">My Profile</string>
    <string name="user_settings">Settings</string>
    <string name="deal">Deals will Appear Here</string>
    <string name="button_add_text">add</string>
    <string name="image_insert_txt">Optional Image Insert</string>
    <string name="description_button_text">TODO</string>
    <string name="add_image_icon">Add Image</string>
    <string name="dummy_text">Hello World</string>
    <string name="dummy_user_name">John Doe</string>
    <string name="user_profile_picture">profile picture</string>
    <string name="dummy_item">Lorem Ipsum</string>
    <string name="text_logout">Logout</string>
    <string name="text_notifications">Notifications</string>
    <string name="text_chats">Chats</string>
    <string name="text_edit_and_add">Edit and Add</string>
    <string name="text_display_goods">Display Goods</string>
    <string name="text_your_feed">Your Feed</string>
    <string name="menu_item_dashboard">Dashboard</string>
    <string name="dummy_logout_toast_message">this will log us out when Implemented</string>
    <string name="dummy_message_settings">This should take us to the User Settings</string>
    <string name="dummy_text_userprofile">This should take us to the User Profile</string>
    <string name="notification_header">Notifications</string>
    <string name="chat_header">Chats</string>
    <string name="feed_header">Feed</string>
    <string name="profile_header">Profile</string>
    <string name="deals_header">Deals</string>
    <string name="desc_add">ADD</string>
    <string name="desc_sold">SOLD DEAL</string>
    <string name="desc_share">SHARE DEAL</string>
    <string name="profile_image_desc">USER PROFILE</string>
    <string name="desc_post_image">POST IMAGE</string>
    <string name="dummy_time">2 Hours Ago</string>
    <string name="desc_start_chat">START A CHAT</string>
    <string name="str_res_text_editdealnote">Fill your deal details below</string>
    <string name="desc_add_image">ADD YOUR IMAGE</string>
    <string name="deals_empy_notice">Ooops! Nothing Here Yet. Click on the Add Button to Add your Deal</string>
    <string name="added_deals_feedback"> items have been added to your deals. click the cart when done.</string>
    <string name="added_deal_feedback"> item have been added to your deals. click the cart when done.</string>
    <string name="blank_notice_edit_and_add">Nothing Here Yet.</string>
</resources>