<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fadingEdge="horizontal|vertical"
        android:fadingEdgeLength="@dimen/bigshop_fading_edge_small_1"
        android:focusable="true"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="@dimen/bigshop_large_corner_radius"
        app:cardElevation="@dimen/bigshop_small_card_elevation"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/bigshop_padding_2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/deal_item_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/dummy_text"
                android:textColor="@color/colorFormerPrimaryDark"
                android:textSize="@dimen/bigshop_medium_txt"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/deal_item_sold_button"
                app:layout_constraintStart_toEndOf="@+id/deal_item_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/deal_item_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dummy_item"
                android:textSize="@dimen/bigshop_medium_txt_2"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/deal_item_share_button"
                app:layout_constraintStart_toStartOf="@+id/deal_item_name"
                app:layout_constraintTop_toBottomOf="@+id/deal_item_name" />

            <TextView
                android:id="@+id/deal_item_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/dummy_text"
                android:textColor="@color/oneBigShop_grey_2"
                android:textSize="@dimen/bigshop_small_txt_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/deal_item_share_button"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/deal_item_price"
                app:layout_constraintTop_toBottomOf="@+id/deal_item_price"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/deal_item_image"
                android:layout_width="99dp"
                android:layout_height="106dp"
                android:contentDescription="@string/add_image_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/empty_image" />

            <ImageView
                android:id="@+id/deal_item_sold_button"
                android:layout_width="29dp"
                android:layout_height="28dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/desc_sold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/sold_deal" />

            <ImageView
                android:id="@+id/deal_item_share_button"
                android:layout_width="28dp"
                android:layout_height="32dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/desc_share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/deal_item_sold_button"
                app:layout_constraintTop_toBottomOf="@+id/deal_item_sold_button"
                app:srcCompat="@drawable/share_deal_black" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>