<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DealDisplayActivity">

    <ImageView
        android:id="@+id/image_nothing_here"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/deal"
        android:cropToPadding="true"
        android:padding="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/deal_text_notice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rv_deal_display"
        app:layout_constraintVertical_bias="0.87"
        app:srcCompat="@drawable/no_data_icon" />

    <TextView
        android:id="@+id/deal_text_notice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/deals_empy_notice"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/oneBigShop_grey_2"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/chat_header"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/add_deal"
        app:layout_constraintEnd_toEndOf="@+id/add_deal"
        app:srcCompat="@drawable/chats_icon"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_deal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#FBFAFA"
        android:clickable="true"
        android:contentDescription="@string/desc_add"
        android:focusable="true"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/add_deals" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_deal_display"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/deal_list_item" />

</androidx.constraintlayout.widget.ConstraintLayout>